# qscripts

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  prep-cmake.bat  qscripts.cpp
snippet_manager/: README.md
test_addons/: qscripts_native.py
test_addons/loader_template/: CMakeLists.txt  main.cpp
test_addons/plugin_template/: CLAUDE.md  CMakeLists.txt
test_addons/plugin_template/.claude/agents/: ida-cmake.md
test_addons/plugin_triton/: CMakeLists.txt  qscripts_native_triton.py
